--- a/data-analysis-explained.org
+++ b/data-analysis-explained.org
@@ -18,6 +18,16 @@ data  = np.loadtxt('train.csv', delimiter=',')
 label = np.loadtxt('trainLabels.csv', delimiter=',')
 test  = np.loadtxt('test.csv',delimiter=',')
 #+END_SRC 
+
+Function to create a kaggle-compliant file :
+#+BEGIN_SRC python
+def kaggle_file(path,coll):
+    with open(path,"w") as csvfile:
+        csvfile.write("id,solution\n")
+        i = 0
+        for i,v in enumerate(coll):
+            csvfile.write("%d,%d\n" % (i+1,v))
+#+END_SRC
 * Cross Validation
 
 To determine the performance of any supervised model, known dataset is split into 2 parts : 
@@ -72,6 +82,21 @@ plot(c_values,final_scores)
 max(zip(final_scores,c_values))
 #+END_SRC
 
+In scikit-learn [[http://scikit-learn.org/dev/modules/generated/sklearn.grid_search.GridSearchCV.html][GridSearchCV]] find automatically the best parameters of an estimator :
+
+#+BEGIN_SRC python
+import sklearn from grid_search
+
+C_range = np.linspace(2,20,20)
+gamma_range = np.logspace(-3, 0, 5)
+param_grid = {'gamma':gamma_range, 'C':C_range}
+cv = cross_validation.KFold(len(label), n_folds=10, shuffle=True, random_state=0)
+classifier = svm.SVC() 
+gs = grid_search.GridSearchCV(classifier, param_grid=param_grid, cv=cv)
+print gs.best_estimator_
+#+END_SRC
+
+
 * Other Models
  NeuralNetworks, Boosting and boostrap models give poor result as dataset is rather small.
 * With Dimension reduction
@@ -88,6 +113,6 @@ There is no obvious threshold on orthogonal components
    - Train the model on a well-truncated dataset ? Because some data points biaised the model ?
    - Refine parameters optimization not simply one at the time ?
 * Conclusion
-   The SVM (C=3 and gamma=0.28) associated with a PCA 12 components gives a decent score 0.94635.
+   The SVM (C=3 and gamma=0.28) associated with a PCA 12 components gives a score of 0.94635 (slight improvement with GridSearchCV : 0.94970).
 
-   This work was done @ [[http://www.bigdive.eu/][bigdive2013]] and was made possible thanks to all the teachers and bigdivers.
+   This work was done @ [[http://www.bigdive.eu/][bigdive2013]] with special thanks to [[http://twitter.com/apanisson][André Panisson]] our teacher.
